# lua-sentencepiece

./: CMakeLists.txt  README.md  lua-sentencepiece-scm-1.rockspec  test.lua
src/: lua_wrapper.cc
test/: en.model  en.vocab  fr.model  sample.model  sample.vocab
